@@ -20,17 +20,16 @@
 
 package de.unijena.bioinf.ms.middleware.controller;
 
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import de.unijena.bioinf.ChemistryBase.utils.FileUtils;
-import de.unijena.bioinf.ms.frontend.core.Workspace;
 import de.unijena.bioinf.ms.middleware.configuration.GlobalConfig;
 import de.unijena.bioinf.ms.middleware.model.compute.CommandSubmission;
 import de.unijena.bioinf.ms.middleware.model.compute.Job;
 import de.unijena.bioinf.ms.middleware.model.compute.JobSubmission;
+import de.unijena.bioinf.ms.middleware.model.compute.StoredJobSubmission;
 import de.unijena.bioinf.ms.middleware.service.compute.ComputeService;
+import de.unijena.bioinf.ms.middleware.service.job.JobConfigService;
 import de.unijena.bioinf.ms.middleware.service.projects.Project;
 import de.unijena.bioinf.ms.middleware.service.projects.ProjectsProvider;
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.jetbrains.annotations.NotNull;
@@ -43,14 +42,8 @@ import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static de.unijena.bioinf.ms.middleware.service.annotations.AnnotationUtils.removeNone;
 
@@ -58,15 +51,17 @@ import static de.unijena.bioinf.ms.middleware.service.annotations.AnnotationUtil
 @RequestMapping(value = "/api")
 @Tag(name = "Jobs", description = "Start, monitor and cancel background jobs.")
 public class JobController {
-    public final static String DEFAULT_PARAMETERS = "DEFAULT";
+    public final static String DEFAULT_CONFIG_NAME = "Default";
     private final ComputeService computeService;
     private final ProjectsProvider<?> projectsProvider;
     private final GlobalConfig globalConfig;
+    private final JobConfigService jobConfigService;
 
-    public JobController(ComputeService computeService, ProjectsProvider<?> projectsProvider, GlobalConfig globalConfig) {
+    public JobController(ComputeService computeService, ProjectsProvider<?> projectsProvider, GlobalConfig globalConfig, JobConfigService jobConfigService) {
         this.computeService = computeService;
         this.projectsProvider = projectsProvider;
         this.globalConfig = globalConfig;
+        this.jobConfigService = jobConfigService;
     }
 
 
@@ -80,7 +75,7 @@ public class JobController {
     @ResponseStatus(HttpStatus.OK)
     public Page<Job> getJobsPaged(@PathVariable String projectId,
                                   @ParameterObject Pageable pageable,
-                                  @RequestParam(defaultValue = "") EnumSet<Job.OptField> optFields
+                                  @RequestParam(defaultValue = "none") EnumSet<Job.OptField> optFields
     ) {
         return computeService.getJobs(projectsProvider.getProjectOrThrow(projectId), pageable, removeNone(optFields));
     }
@@ -94,7 +89,7 @@ public class JobController {
     @GetMapping(value = "/projects/{projectId}/jobs", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
     public List<Job> getJobs(@PathVariable String projectId,
-                             @RequestParam(defaultValue = "") EnumSet<Job.OptField> optFields
+                             @RequestParam(defaultValue = "none") EnumSet<Job.OptField> optFields
     ) {
         return getJobsPaged(projectId, globalConfig.unpaged(), optFields).stream().toList();
     }
@@ -154,7 +149,7 @@ public class JobController {
                                   @RequestParam(required = false) @Nullable Boolean recompute,
                                   @RequestParam(defaultValue = "command, progress") EnumSet<Job.OptField> optFields
     ) {
-        final JobSubmission js = getJobConfig(jobConfigName, true, false);
+        final JobSubmission js = getJobConfig(jobConfigName, false).getJobSubmission();
         js.setAlignedFeatureIds(alignedFeatureIds);
         if (recompute != null)
             js.setRecompute(recompute);
@@ -163,16 +158,16 @@ public class JobController {
     }
 
     /**
-     * Start computation for given command and input.
+     * [DEPRECATED] Start computation for given command and input.
+     * <p>
+     * [DEPRECATED] this endpoint is based on local file paths and will likely be removed in future versions of this API.
      *
      * @param projectId         project-space to perform the command for.
      * @param commandSubmission the command and the input to be executed
      * @param optFields         set of optional fields to be included. Use 'none' only to override defaults.
      * @return Job of the command to be executed.
-     *
-     * DEPRECATED: this endpoint is based on local file paths and will likely be removed in future versions of this API.
      */
-    @Deprecated
+    @Deprecated(forRemoval = true)
     @PostMapping(value = "/projects/{projectId}/jobs/run-command", produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     public Job startCommand(@PathVariable String projectId, @Valid @RequestBody CommandSubmission commandSubmission,
                             @RequestParam(defaultValue = "progress") EnumSet<Job.OptField> optFields
@@ -227,13 +222,15 @@ public class JobController {
      *
      * @param includeConfigMap if true, generic configmap with-defaults will be included
      * @param moveParametersToConfigMap if true, object-based parameters will be converted to and added to the generic configMap parameters
+     * @param includeCustomDbsForStructureSearch if true, default database selection of structure db search contains also all available custom DB.
      * @return {@link JobSubmission} with all parameters set to default values.
      */
     @GetMapping(value = "/default-job-config", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
     public JobSubmission getDefaultJobConfig(@RequestParam(required = false, defaultValue = "false") boolean includeConfigMap,
-                                             @RequestParam(required = false, defaultValue = "false") boolean moveParametersToConfigMap) {
-        JobSubmission js = JobSubmission.createDefaultInstance(includeConfigMap);
+                                             @RequestParam(required = false, defaultValue = "false") boolean moveParametersToConfigMap,
+                                             @RequestParam(required = false, defaultValue = "false") boolean includeCustomDbsForStructureSearch) {
+        JobSubmission js = jobConfigService.getDefaultJobConfig(includeCustomDbsForStructureSearch);
         if (moveParametersToConfigMap) {
             js.mergeCombinedConfigMap();
         }
@@ -246,95 +243,83 @@ public class JobController {
     /**
      * Request all available job configurations
      *
-     * @param includeConfigMap if true, the generic configmap will be part of the output. DEPRECATED: this parameter will be removed in a future release
      * @return list of available {@link JobSubmission}s
      */
     @GetMapping(value = "/job-configs", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
-    public List<JobSubmission> getJobConfigs(@Deprecated(forRemoval = true) @RequestParam(required = false, defaultValue = "false") boolean includeConfigMap) {
-        try {
-            List<JobSubmission> js = FileUtils.listAndClose(Workspace.runConfigDir, s -> s.filter(Files::isRegularFile)
-                    .map(this::readFromFile).collect(Collectors.toList()));
-
-            if (!includeConfigMap) js.forEach(j -> j.setConfigMap(null));
-
-            return js;
-        } catch (IOException e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected Error when crawling job-config files.", e);
-        }
+    public List<StoredJobSubmission> getJobConfigs() {
+        List<StoredJobSubmission> configs = jobConfigService.getAllConfigs();
+        configs.forEach(js -> js.getJobSubmission().mergeCombinedConfigMap());
+        return configs;
     }
 
     /**
-     * Get all (non-default) job configuration names
+     * [DEPRECATED] Get all (non-default) job configuration names
+     * <p>
+     * [DEPRECATED] Use /job-configs to get all configs with names. This endpoint is based on local file paths and will likely be removed in future versions of this API.
+     *
      */
     @GetMapping(value = "/job-config-names", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
+    @Deprecated(forRemoval = true)
     public List<String> getJobConfigNames() {
-        try {
-            return FileUtils.listAndClose(Workspace.runConfigDir, s -> s.filter(Files::isRegularFile)
-                    .map(p -> p.getFileName().toString())
-                    .map(f -> f.replaceFirst("\\.json$", ""))
-                    .collect(Collectors.toList()));
-        } catch (IOException e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected Error when crawling job-config files.", e);
-        }
+        return getJobConfigs().stream()
+                .map(StoredJobSubmission::getName)
+                .filter(n -> !n.equals(JobConfigService.DEFAULT_CONFIG_NAME))
+                .toList();
     }
 
     /**
      * Request job configuration with given name.
      *
      * @param name             name of the job-config to return
-     * @param includeConfigMap if true, the generic configmap will be part of the output. DEPRECATED: this parameter will be removed in a future release
      * @param moveParametersToConfigMap if true, object-based parameters will be converted to and added to the generic configMap parameters
      * @return {@link JobSubmission} for given name.
      */
     @GetMapping(value = "/job-configs/{name}", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
-    public JobSubmission getJobConfig(@PathVariable @NotNull String name,
-                                      @Deprecated(forRemoval = true) @RequestParam(required = false, defaultValue = "false") boolean includeConfigMap,
-                                      @RequestParam(required = false, defaultValue = "false") boolean moveParametersToConfigMap) {
-        if (name.equals(DEFAULT_PARAMETERS)) return getDefaultJobConfig(includeConfigMap, moveParametersToConfigMap);
-
-        final Path config = Workspace.runConfigDir.resolve(name + ".json");
-
-        JobSubmission js = readFromFile(config);
+    public StoredJobSubmission getJobConfig(
+            @PathVariable @NotNull String name,
+            @RequestParam(required = false, defaultValue = "false") boolean moveParametersToConfigMap
+    ) {
+        StoredJobSubmission config = jobConfigService.getConfig(name);
         if (moveParametersToConfigMap) {
-            js.mergeCombinedConfigMap();
+            config.getJobSubmission().mergeCombinedConfigMap();
         }
-        if (!includeConfigMap) {
-            js.setConfigMap(null);
-        }
-        return js;
+        return config;
     }
 
     /**
      * Add new job configuration with given name.
      *
-     * @param name      name of the job-config to add
-     * @param jobConfig to add
-     * @return Probably modified name of the config (to ensure filesystem path compatibility).
+     * @param name                      name of the job-config to add
+     * @param jobConfig                 to add
+     * @param moveParametersToConfigMap if true, object-based parameters will be converted to and added to the generic configMap parameters in the return object
+     * @return StoredJobSubmission that contains the JobSubmission and the probably modified name of the config (to ensure path compatibility).
      */
-    @PostMapping(value = "/job-configs/{name}", produces = {MediaType.TEXT_PLAIN_VALUE, MediaType.APPLICATION_PROBLEM_JSON_VALUE}) //this needs to be text because some SDKs consider a string field as invalid json.
+    @PostMapping(value = "/job-configs/{name}", produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.OK)
-    public String saveJobConfig(@PathVariable String name, @RequestBody JobSubmission jobConfig, @RequestParam(required = false, defaultValue = "false") boolean overrideExisting) {
+    public StoredJobSubmission saveJobConfig(
+            @PathVariable String name, @RequestBody JobSubmission jobConfig,
+            @RequestParam(required = false, defaultValue = "false") boolean overrideExisting,
+            @RequestParam(required = false, defaultValue = "false") boolean moveParametersToConfigMap
+    ) {
         name = name.replaceAll("\\W+", "_");
-        if (name.equals(DEFAULT_PARAMETERS))
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "The job-config name '" + DEFAULT_PARAMETERS + "' is already blocked by the default job-config.");
-
-        final Path config = Workspace.runConfigDir.resolve(name + ".json");
-        if (!overrideExisting && Files.exists(config))
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Job-config with name '" + name + "' already exists. Try again with 'overrideExisting' if you wish to replace it.");
-
         // remove compounds since they are not permitted in a template config
         jobConfig.setCompoundIds(null);
         jobConfig.setAlignedFeatureIds(null);
 
-        try (OutputStream s = Files.newOutputStream(config)) {
-            new ObjectMapper().writerWithDefaultPrettyPrinter().writeValue(s, jobConfig);
-            return name;
-        } catch (IOException e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected Error when reading default config file.", e);
+        if (jobConfigService.configExists(name)) {
+            if (overrideExisting) {
+                jobConfigService.updateConfig(name, jobConfig);
+            } else {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Job-config with name '" + name + "' already exists. Try again with 'overrideExisting' if you wish to replace it.");
+            }
+        } else {
+            jobConfigService.addUserConfig(name, jobConfig);
         }
+
+        return getJobConfig(name, moveParametersToConfigMap);
     }
 
     /**
@@ -344,19 +329,7 @@ public class JobController {
      */
     @DeleteMapping(value = "/job-configs/{name}", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.ACCEPTED)
-    public void deleteJobConfig(@PathVariable String name) throws IOException {
-        Files.deleteIfExists(Workspace.runConfigDir.resolve(name + ".json"));
-    }
-
-    private JobSubmission readFromFile(Path path) {
-        if (Files.notExists(path) || !Files.isRegularFile(path))
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Job-config '" + path + "' does not exist.");
-
-        try (InputStream s = Files.newInputStream(path)) {
-            return new ObjectMapper().configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
-                    .readValue(s, JobSubmission.class);
-        } catch (Exception e) {
-            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Unexpected error when reading job-config file '" + path + "'.", e);
-        }
+    public void deleteJobConfig(@PathVariable String name) {
+        jobConfigService.deleteUserConfig(name);
     }
 }
